<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff5722">

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_registration_registration_title_text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registrationName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/registrationName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/auth_input_data_bg"
        android:hint="@string/activity_registration_registration_name_hint"
        android:inputType="textPersonName"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/registrationEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTitle"
        tools:text="MyName" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/registrationEmail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/auth_input_data_bg"
        android:hint="@string/activity_registration_registration_email_hint"
        android:inputType="textEmailAddress"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/registrationPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationName"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="zxcv1234@gmail.com" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/registrationPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/auth_input_data_bg"
        android:hint="@string/activity_registration_registration_password_hint"
        android:inputType="textPassword"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/registrationBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationEmail"
        tools:text="zxcvbnm12345" />

    <Button
        android:id="@+id/registrationBackButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_registration_registration_back_button_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/registrationConfirmationButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationPassword" />

    <Button
        android:id="@+id/registrationConfirmationButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/activity_registration_registration_confirmation_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/registrationBackButton"
        app:layout_constraintTop_toTopOf="@+id/registrationBackButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="550dp" />

</android.support.constraint.ConstraintLayout>