<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                tools:text="1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/photoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/photo"
                app:layout_constraintStart_toStartOf="@+id/userId"
                app:layout_constraintTop_toBottomOf="@+id/userId"
                tools:text="Text" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:src="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoDescription"
                android:contentDescription="@string/template_message_photo_content_description" />

            <ImageButton
                android:id="@+id/addLikeButton"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:src="@drawable/ic_favourite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hideShowComments"
                android:contentDescription="@string/template_message_add_like_image_button" />

            <TextView
                android:id="@+id/numberOfUsersWhoLikedPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/addLikeButton"
                app:layout_constraintStart_toEndOf="@+id/addLikeButton"
                app:layout_constraintTop_toTopOf="@+id/addLikeButton"
                tools:text="4" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/commentsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/addCommentButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hideShowComments" />

            <EditText
                android:id="@+id/addCommentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addCommentButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/commentsRecyclerView"
                app:layout_constraintTop_toBottomOf="@+id/commentsRecyclerView"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/addCommentButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/template_message_add_comment_button_text"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/commentsRecyclerView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addCommentText" />

            <ImageButton
                android:id="@+id/hideShowComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:src="@drawable/ic_comment"
                android:text="@string/template_message_hide_show_comments_text"
                app:layout_constraintBottom_toTopOf="@+id/commentsRecyclerView"
                app:layout_constraintStart_toEndOf="@+id/numberOfUsersWhoLikedPost"
                app:layout_constraintTop_toBottomOf="@+id/photo"
                android:contentDescription="@string/template_message_hide_show_comments_content_description" />

            <TextView
                android:id="@+id/commentsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/hideShowComments"
                app:layout_constraintStart_toEndOf="@+id/hideShowComments"
                app:layout_constraintTop_toTopOf="@+id/hideShowComments"
                tools:text="7" />

            <ImageButton
                android:id="@+id/navigationMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_navigation"
                android:contentDescription="@string/template_message_navigation_menu_content_description" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>